--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -303,7 +303,12 @@
       "noLimit": "无限制",
       "neverUsed": "从未使用",
       "noExpiration": "永不过期",
-      "unlimited": "无限"
+      "unlimited": "无限",
+      "monthlyQuota": "月度配额",
+      "quotaUsed": "已使用配额",
+      "topUpQuotaAvailable": "充值配额可用",
+      "quotaUsage": "配额使用",
+      "topUpActive": "充值生效中"
     },
     "usageDetails": {
       "title": "使用详情",
@@ -325,7 +330,7 @@
     "upgradePlan": "升级",
     "membershipLevel": "会员等级",
     "topUp": "充值",
-    "topUpLeft": "+{quota} 额外额度",
+    "topUpLeft": "+ ${quota} 额外额度",
     "topUpExpiresOn": "过期时间",
     "topUpDialog": {
       "title": "充值账户",
