--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -316,6 +316,7 @@
     "profile": "Profil",
     "billing": "Facturation",
     "settings": "Paramètres",
+    "loading": "Chargement...",
     "navigation": "Navigation",
     "utcNotice": "Toutes les dates et heures sont basées sur l'UTC, et les données peuvent être retardées jusqu'à 5 minutes.",
     "monthlyQuota": "Quota Mensuel",
@@ -491,6 +492,8 @@
       "subtitle": "Vos informations de profil",
       "noSubscription": "Veuillez vous abonner pour accéder à votre profil.",
       "basicInformation": "Informations de Base",
+      "edit": "Modifier",
+      "memberSince": "Membre depuis",
       "accountDetails": "Détails du Compte",
       "preferences": "Préférences",
       "name": "Nom",
