--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -316,6 +316,7 @@
     "profile": "プロフィール",
     "billing": "請求",
     "settings": "設定",
+    "loading": "読み込み中...",
     "navigation": "ナビゲーション",
     "utcNotice": "すべての日付と時刻はUTCベースで、データは最大5分遅延する場合があります。",
     "monthlyQuota": "月次クオータ",
@@ -491,6 +492,8 @@
       "subtitle": "プロフィール情報",
       "noSubscription": "プロフィールにアクセスするには購読してください。",
       "basicInformation": "基本情報",
+      "edit": "編集",
+      "memberSince": "登録日",
       "accountDetails": "アカウント詳細",
       "preferences": "設定",
       "name": "名前",
