--- a/src/i18n/messages/ko.json
+++ b/src/i18n/messages/ko.json
@@ -316,6 +316,7 @@
     "profile": "프로필",
     "billing": "결제",
     "settings": "설정",
+    "loading": "로딩 중...",
     "navigation": "네비게이션",
     "utcNotice": "모든 날짜와 시간은 UTC 기반이며, 데이터는 최대 5분 지연될 수 있습니다.",
     "monthlyQuota": "월간 쿼터",
@@ -491,6 +492,8 @@
       "subtitle": "프로필 정보",
       "noSubscription": "프로필에 접근하려면 구독하세요.",
       "basicInformation": "기본 정보",
+      "edit": "편집",
+      "memberSince": "가입일",
       "accountDetails": "계정 세부사항",
       "preferences": "환경설정",
       "name": "이름",
